[package]
name = "aggregator_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
postgres = "0.19.10"
bb8 = "0.8"
bb8-postgres = "0.8"
tokio-postgres = "0.7.13"
solana-client = "2.2.4"
solana-sdk = "2.2.2"

